--- a/web/index.html
+++ b/web/index.html
@@ -13,6 +13,6 @@
 </head>
 <body>
     <canvas id="chessCanvas"></canvas>
-    <script type="module" src="webgl/main.js"></script>
+    <script type="module" src="./src/main.ts"></script>
 </body>
 </html>
