--- a/web/index.html
+++ b/web/index.html
@@ -1,18 +1,66 @@
 <!DOCTYPE html>
-<html>
+<html lang="en">
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>3D Chess</title>
     <style>
-        canvas {
-            width: 100%;
-            height: 100%;
-            display: block;
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
         }
-        body { margin: 0; }
+
+        body {
+            width: 100vw;
+            height: 100vh;
+            overflow: hidden;
+            background: #000;
+            display: flex;
+            justify-content: center;
+            align-items: center;
+            padding: 20px;
+        }
+        
+        #game-container {
+            width: 800px;
+            height: 600px;
+            position: relative;
+            border: 2px solid #444;
+            border-radius: 8px;
+            background: #1a1a1a;
+            box-shadow: 0 0 20px rgba(0, 0, 0, 0.5);
+        }
+
+        #turn-indicator {
+            position: absolute;
+            top: 20px;
+            left: 20px;
+            color: white;
+            font-family: Arial, sans-serif;
+            font-size: 18px;
+            z-index: 1000;
+            background: rgba(0, 0, 0, 0.7);
+            padding: 10px 20px;
+            border-radius: 5px;
+            border: 1px solid #333;
+        }
+
+        canvas {
+            width: 100% !important;
+            height: 100% !important;
+            border-radius: 8px;
+        }
     </style>
 </head>
 <body>
-    <canvas id="chessCanvas"></canvas>
-    <script type="module" src="./src/main.ts"></script>
+    <div id="game-container">
+        <div id="turn-indicator">White's turn</div>
+    <script type="module">
+        import { ChessGame } from './src/app';
+        const game = new ChessGame('game-container');
+        game.init();
+    </script>
+    </div>
 </body>
 </html>
