added fixed card ui view

--- a/web/index.html
+++ b/web/index.html
@@ -23,8 +23,8 @@
         }
         
         #game-container {
-            width: 800px;
-            height: 600px;
+            width: 90%;
+            height: 95%;
             position: relative;
             border: 2px solid #444;
             border-radius: 8px;
